			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04g: *********************************

BUG: (3/6/06, DN) Error whne initializing imn MDI mode.
FIX: Remove "new EventProcessor" from "UserInterfaceMain.initializeInitJob".

IMP: (3/6/06, RK) More support to copy Node names from schematic to layout

BUG: (3/6/06, DN) Check invariants at creating snapshot is too slow.
FIX: Check them more incrementally.

BUG: (3/5/06, GVG) On Mac OX S, double click on library didn't open in Electric.
FIX: Another job in UserInterface to call "setInitJob".

BUG: (3/3/06, GVG) Exception in MenuBar.finished() and ToolBar.finished() when setUI(null) (Bug #843).
FIX: line commented out.

IMP: (3/3/06, GVG) New Spice engine in SpiceTab. This is for those running HSpice for Assura.

IMP: (3/3/06, RK) Add NCC Annotation to Cell throws serialization exception. Due to new client/server model. (Bugzilla# 844)

IMP: (3/2/06, GVG) Adding DRC and AreaCoverage regression tests in main code.

IMP: (3/2/06, GVG) DRC Exclusion working hierarchically (Bug #841)

IMP: (3/2/06, GVG) DRC Exclusion nodes available as annular rings (Bug #842)

IMP: (3/2/06, RK) Support for highlighting equivalent Networks and NodeInsts

************************* Version 8.04f: *********************************

BUG: (3/2/06, GVG) Wrong initialization on Mac. Class MacOSXInterface was moved to tool.user package (#bug 837)
FIX: Change in class load path.

BUG: (3/1/06, SMR) Waveform window doesn't draw signals with only 1 data point (Bug #836).
FIX: In Panel.processSignals() draw extrapolation of last data point.

BUG: (3/1/06, SMR) Spice model files cannot be changed (Bug #840).
FIX: Made them preferences instead of storing them in cells.

BUG: (3/1/06, SMR) Cannot create attributes (Bug #838).
FIX: In Attributes.checkName(), detect existing attributes properly.

BUG: (3/1/06, SMR) "Cleanup Pins" doesn't work (Bug #839)